...
    lazy var dismissButton: UIButton = {
        let button = UIButton(type: .system)
        button.translatesAutoresizingMaskIntoConstraints = false
        // bluish color to match main screen background
        button.backgroundColor = UIColor(red: 48/255, green: 153/255, blue: 192/255, alpha: 1)
        
        button.setTitle("Dismiss", for: .normal)
        button.titleLabel?.font = .boldSystemFont(ofSize: 16)
        button.setTitleColor(.white, for: .normal)
        button.addTarget(self, action: #selector(AboutInstructionsController.dismissButtonTapped), for: .touchUpInside)
        return button
    }()
    
...
